--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-petgraph (0.6.2-1pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 16 Nov 2022 21:57:46 +0000
+
 rust-petgraph (0.6.2-1) unstable; urgency=medium
 
   [ Blair Noctis ]
