--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-petgraph (0.6.2-1pexip2) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:31:12 +0000
+
 rust-petgraph (0.6.2-1pexip1) pexip; urgency=medium
 
   * Prepare Pexip packaging
